<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/dialog_add.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#F5F5DC"
    android:padding="16dp">

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idadd"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usernameadd"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passwordadd"/>

    <EditText
        android:id="@+id/roleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/roleadd"/>

</LinearLayout>