<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5DC"
    android:padding="16dp">

    <TextView
        android:id="@+id/employeeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/employee_username"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <ScrollView
        android:id="@+id/reportScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout
            android:id="@+id/reportTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <!-- Headers for the table -->
            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/clock_in"
                    android:textStyle="bold"
                    android:padding="8dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/clock_out"
                    android:textStyle="bold"
                    android:padding="8dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/total_time"
                    android:textStyle="bold"
                    android:padding="8dp"/>
            </TableRow>

        </TableLayout>
    </ScrollView>
    <Button
        android:id="@+id/payrollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_payroll"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#f4a460"
        android:layout_marginTop="16dp"/>
</LinearLayout>